--- a/compose-macros/Cargo.toml
+++ b/compose-macros/Cargo.toml
@@ -11,16 +11,16 @@ categories = ["no-std"]
 
 
 [dependencies]
-log = { version = "0.4", default-features = false }
-maybe-async = { version = "0.2" }
+log = { workspace = true }
+maybe-async = { workspace = true }
 
 # local
-ac-primitives = { path = "../primitives", version = "1.17", default-features = false }
+ac-primitives = { workspace = true }
 
 [dev-dependencies]
-ac-node-api = { path = "../node-api", version = "1.17" }
-frame-metadata = { version = "18.0" }
-codec = { package = "parity-scale-codec", version = "3.7" }
+ac-node-api = { workspace = true }
+frame-metadata = { workspace = true }
+codec = { workspace = true }
 
 
 [features]
