Update rust toolchain to latest nightly (#861)
* update toolchain

* cargo.toml: exchange ' with "

* fix clippy

* cargo.toml: remove extra feautres - already imported via workspace

--- a/examples/async/Cargo.toml
+++ b/examples/async/Cargo.toml
@@ -9,7 +9,7 @@ codec = { workspace = true, features = ["std"] }
 env_logger = { workspace = true }
 log = { workspace = true }
 serde_json = { workspace = true, features = ["std"] }
-tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
+tokio = { workspace = true }
 tokio-util = { workspace = true }
 
 # Substrate dependencies
