Remove deprecated ws-client (#860)
* remove deprecated ws-client

* cargo fmt

* update cargo.lock

--- a/testing/sync/Cargo.toml
+++ b/testing/sync/Cargo.toml
@@ -12,5 +12,5 @@ sp-core = { workspace = true }
 sp-runtime = { workspace = true }
 
 # local deps
-substrate-api-client = { workspace = true, features = ["tungstenite-client", "ws-client"] }
+substrate-api-client = { workspace = true, features = ["tungstenite-client"] }
 ac-keystore = { workspace = true }
