--- a/examples/sync/Cargo.toml
+++ b/examples/sync/Cargo.toml
@@ -15,4 +15,4 @@ sp-runtime = { workspace = true }
 sp-weights = { workspace = true }
 
 # local deps
-substrate-api-client = { workspace = true, features = ["tungstenite-client", "ws-client"] }
+substrate-api-client = { workspace = true, features = ["tungstenite-client"] }
