--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches: [ master, 'polkadot-v[0-9]+.[0-9]+.[0-9]+*', 'release-polkadot-v[0-9]+.[0-9]+.[0-9]+*' ]
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * 0" # weekly build: every sunday at midnight
 
 env:
   CARGO_TERM_COLOR: always
